k8s/server1-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: server1-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: server1
    ports:
        - port: 5001
          targetPort: 5001
