k8s/server2-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
    name: server2-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: server2
    ports:
        - port: 5002
          targetPort: 5002
