k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
    rules:
        - http:
              paths:
                  - path: /server1/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: server1-cluster-ip-service
                            port:
                                number: 5001
                  - path: /server2/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: server2-cluster-ip-service
                            port:
                                number: 5002
